<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/fragment_background"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="12dp" >

            <TextView
                style="@style/TextView.Grey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/publish_details"
                android:textSize="16sp" />

            <TextView
                style="@style/TextView.Yellow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:gravity="right"
                android:text="@string/publish_details_hint"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            style="@style/Common_Settings_Layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="12dp"
            android:paddingRight="12dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="4dp" >

                <include layout="@layout/common_view_star" />

                <TextView
                    style="@style/Common_Settings_TextView_Title"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="-8dp"
                    android:text="@string/publish_details_brand" />

                <EditText
                    style="@style/Common_EditText.Transparent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/publish_details_brand_hint" />
            </LinearLayout>

            <include layout="@layout/common_view_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="4dp" >

                <include layout="@layout/common_view_star" />

                <TextView
                    style="@style/Common_Settings_TextView_Title"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="-8dp"
                    android:text="@string/publish_details_material" />

                <EditText
                    style="@style/Common_EditText.Transparent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/publish_details_material_hint" />
            </LinearLayout>

            <include layout="@layout/common_view_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="4dp" >

                <include layout="@layout/common_view_star" />

                <TextView
                    style="@style/Common_Settings_TextView_Title"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="-8dp"
                    android:text="@string/publish_details_category" />

                <EditText
                    style="@style/Common_EditText.Transparent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/publish_details_category_hint" />
            </LinearLayout>

            <include layout="@layout/common_view_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="4dp" >

                <include layout="@layout/common_view_star" />

                <TextView
                    style="@style/Common_Settings_TextView_Title"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="-8dp"
                    android:text="@string/publish_details_model" />

                <EditText
                    style="@style/Common_EditText.Transparent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/publish_details_model_hint" />
            </LinearLayout>

            <include layout="@layout/common_view_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="4dp" >

                <include layout="@layout/common_view_star" />

                <TextView
                    style="@style/Common_Settings_TextView_Title"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="-8dp"
                    android:text="@string/publish_details_price" />

                <EditText
                    style="@style/Common_EditText.Transparent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/publish_details_price_hint" />
            </LinearLayout>

            <include layout="@layout/common_view_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="4dp" >

                <include layout="@layout/common_view_star" />

                <TextView
                    style="@style/Common_Settings_TextView_Title"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="-8dp"
                    android:text="@string/publish_details_marketprice" />

                <EditText
                    style="@style/Common_EditText.Transparent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/publish_details_marketprice_hint" />
            </LinearLayout>

            <include layout="@layout/common_view_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="4dp" >

                <include layout="@layout/common_view_star" />

                <TextView
                    style="@style/Common_Settings_TextView_Title"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="-8dp"
                    android:text="@string/publish_details_discount" />

                <EditText
                    style="@style/Common_EditText.Transparent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/publish_details_discount_hint" />
            </LinearLayout>

            <include layout="@layout/common_view_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="4dp" >

                <include layout="@layout/common_view_star" />

                <TextView
                    style="@style/Common_Settings_TextView_Title"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="-8dp"
                    android:text="@string/publish_details_crowd" />

                <EditText
                    style="@style/Common_EditText.Transparent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/publish_details_crowd_hint" />
            </LinearLayout>

            <include layout="@layout/common_view_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="4dp" >

                <include layout="@layout/common_view_star" />

                <TextView
                    style="@style/Common_Settings_TextView_Title"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="-8dp"
                    android:text="@string/publish_details_color" />

                <EditText
                    style="@style/Common_EditText.Transparent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/publish_details_color_hint" />
            </LinearLayout>

            <include layout="@layout/common_view_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="4dp" >

                <include layout="@layout/common_view_star" />

                <TextView
                    style="@style/Common_Settings_TextView_Title"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="-8dp"
                    android:text="@string/publish_details_num" />

                <EditText
                    style="@style/Common_EditText.Transparent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/publish_details_num_hint" />
            </LinearLayout>

            <include layout="@layout/common_view_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="4dp" >

                <include layout="@layout/common_view_star" />

                <TextView
                    style="@style/Common_Settings_TextView_Title"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="-8dp"
                    android:text="@string/publish_details_quality" />

                <EditText
                    style="@style/Common_EditText.Transparent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/publish_details_quality_hint" />
            </LinearLayout>

            <include layout="@layout/common_view_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="4dp" >

                <include layout="@layout/common_view_star" />

                <TextView
                    style="@style/Common_Settings_TextView_Title"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="-8dp"
                    android:text="@string/publish_details_posttime" />

                <EditText
                    style="@style/Common_EditText.Transparent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/publish_details_posttime_hint" />
            </LinearLayout>

            <include layout="@layout/common_view_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="4dp" >

                <TextView
                    style="@style/Common_Settings_TextView_Title"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="-8dp"
                    android:text="@string/publish_details_story" />

                <EditText
                    style="@style/Common_EditText.Transparent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/publish_details_story_hint"
                    android:gravity="top|left"
                    android:lines="3" />
            </LinearLayout>

            <include layout="@layout/common_view_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:orientation="horizontal"
                android:padding="4dp" >

                <TextView
                    style="@style/Common_Settings_TextView_Title"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="-8dp"
                    android:text="@string/publish_details_keywords" />

                <EditText
                    style="@style/Common_EditText.Transparent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/publish_details_keywords_hint"
                    android:gravity="top|left"
                    android:lines="3" />
            </LinearLayout>

            <include layout="@layout/common_view_line" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <Button
                android:id="@+id/button_publish_details_confirm"
                style="@style/Button.Yellow"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:text="@string/publish_confirm" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>