<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fragment_background"
    android:orientation="vertical"
    android:padding="8dp" >

    <TextView
        style="@style/Common_TextView_Error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:text="@string/refundment_cause" />

    <EditText
        android:id="@+id/edittext_refundment_cause"
        style="@style/Common_EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/refundment_cause_hint"
        android:singleLine="true" />

    <TextView
        style="@style/Common_TextView_Error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:text="@string/refundment_price" />

    <EditText
        android:id="@+id/edittext_refundment_price"
        style="@style/Common_EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:singleLine="true" />

    <TextView
        style="@style/Common_TextView_Error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:text="@string/refundment_mark" />

    <EditText
        android:id="@+id/edittext_refundment_mark"
        style="@style/Common_EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="top"
        android:minHeight="100dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            style="@style/Common_TextView_Error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:text="@string/refundment_mark" />
	 <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        <ImageView
            android:id="@+id/listview_item_order_image"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_face_man" />
         <TextView
            style="@style/Common_TextView_Mark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/refundment_mark_image_hint" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/button_user_login_login"
        style="@style/Button.Yellow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center"
        android:text="@string/user_login" />

</LinearLayout>