<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fragment_background"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp" >

        <TextView
            style="@style/TextView.Grey"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/publish_images" />

        <TextView
            style="@style/TextView.Yellow"
            android:layout_marginLeft="12dp"
            android:textSize="12sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/publish_images_hint" />
    </LinearLayout>

    <LinearLayout
        style="@style/Common_Settings_Layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="12dp" >

        <GridView
            android:id="@+id/gridView"
            style="@style/Common_GridView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:horizontalSpacing="12dp"
            android:numColumns="3"
            android:verticalSpacing="12dp" >
        </GridView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button_publish_images_sevices"
            style="@style/Button.Yellow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:layout_weight="1"
            android:text="@string/publish_images_sevices" />

        <Button
            android:id="@+id/button_publish_images_next"
            style="@style/Button.Yellow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:layout_weight="1"
            android:text="@string/publish_next" />
    </LinearLayout>

</LinearLayout>